Fix security issues on dependencies

--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -7,15 +7,17 @@
     "npm": ">=3.8"
   },
   "dependencies": {
+    "@babel/runtime": "^7.4.5",
     "babel-polyfill": "^6.22.0",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap-sass": "^3.4.1",
     "chart.js": "^2.5.0",
     "classnames": "^2.2.5",
     "dateformat": "^2.0.0",
     "fastclick": "^1.0.6",
     "history": "^4.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.1.1",
+    "mini-css-extract-plugin": "^0.7.0",
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.5",
     "react-dom": "^15.4.2",
@@ -24,42 +26,42 @@
     "react-select": "^1.0.0-rc.5",
     "react-waypoint": "^5.1.0",
     "redux": "^3.6.0",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.0",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.4",
+    "assets-webpack-plugin": "^3.9.10",
     "autoprefixer": "^6.6.1",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-1": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "babel-runtime": "^6.22.0",
-    "bootstrap-loader": "git@github.com:shakacode/bootstrap-loader.git#2.0.0-beta.22",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "bootstrap-loader": "^3.0.4",
     "browser-sync": "^2.18.6",
     "chai": "^4.0.0-canary.1",
-    "compression-webpack-plugin": "^0.3.2",
+    "compression-webpack-plugin": "^3.0.0",
     "connect-history-api-fallback": "^1.3.0",
-    "css-loader": "^0.26.4",
+    "css-loader": "^3.0.0",
     "ejs": "^2.5.5",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.9.0",
+    "eslint": "^6.0.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.14.2",
+    "exports-loader": "^0.7.0",
+    "file-loader": "^4.0.0",
     "front-matter": "^2.1.1",
     "highlight.js": "^9.9.0",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.17.4",
-    "json-loader": "^0.5.4",
+    "imports-loader": "^0.8.0",
+    "json-loader": "^0.5.7",
     "markdown-it": "^8.2.2",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.5.0",
+    "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
     "path-to-regexp": "^1.7.0",
     "pixrem": "^3.0.2",
     "pleeease-filters": "^3.0.0",
@@ -71,32 +73,33 @@
     "postcss-custom-selectors": "^3.0.0",
     "postcss-flexbugs-fixes": "^2.1.0",
     "postcss-import": "^9.1.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^3.0.0",
     "postcss-media-minmax": "^2.1.2",
     "postcss-nesting": "^2.3.1",
     "postcss-selector-matches": "^2.0.5",
     "postcss-selector-not": "^2.0.0",
-    "react-hot-loader": "^3.0.0-beta.2",
-    "resolve-url-loader": "^2.0.2",
+    "react-hot-loader": "^4.11.1",
+    "resolve-url-loader": "^3.1.0",
     "rimraf": "^2.5.4",
     "s3": "^4.4.0",
-    "sass-loader": "^6.0.2",
-    "style-loader": "^0.13.2",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "stylelint": "^7.8.0",
     "stylelint-config-standard": "^16.0.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.0",
-    "webpack-dev-middleware": "^1.9.0",
-    "webpack-hot-middleware": "^2.15.0"
+    "ttf-loader": "^1.0.2",
+    "url-loader": "^2.0.1",
+    "webpack": "^4.35.0",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "babel": {
     "presets": [
-      "latest",
-      "stage-1",
-      "react"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ],
     "plugins": [
-      "transform-runtime"
+      "@babel/plugin-transform-runtime",
+      "@babel/plugin-proposal-class-properties"
     ]
   },
   "eslintConfig": {
@@ -118,11 +121,11 @@
     }
   },
   "scripts": {
-    "eslint": "eslint components src test tools postcss.config.js webpack.config.js",
-    "stylelint": "stylelint \"components/**/*.css\" \"src/**/*.css\"",
+    "eslint": "eslint src test tools",
+    "stylelint": "stylelint \"src/components/**/*.css\" \"src/**/*.css\"",
     "lint": "npm run eslint && npm run stylelint",
-    "test": "mocha --compilers js:babel-register",
-    "test:watch": "mocha --compilers js:babel-register --reporter min --watch",
+    "test": "mocha --require @babel/register",
+    "test:watch": "mocha --require @babel/register --reporter min --watch",
     "build": "node tools/build.js",
     "build:debug": "node tools/build.js --debug",
     "start": "node tools/run.js"
